build!: raise the compile baseline to Java 21 and restore the reverted language features (#222)
Raises the compile baseline from Java 17 to Java 21 (LTS) across all 14 modules —
toolchain stays at 25 — and restores the language features the Java 17
cross-compile stripped:

- Pattern-match switch over the sealed hierarchies in Either, Validated,
  EitherK, ValidatedK, DeepMap (fieldIsoOf + extractDefaultStrategy), and
  ValidatedOrderController; exhaustiveness is compiler-checked, the
  "unreachable" fallthrough throws are gone.
- Record patterns in Validated.combine, ValidatedK.map2, DeepMap.
- Sequenced Collections (getFirst()) across processors, demos, tests.
- try-with-resources on ExecutorService; Telescope.BridgeTelescope back to
  private; @SupportedSourceVersion(RELEASE_21) on the five processors; README
  JVM badge 21+.
- combineAll fails loudly (API-naming NPE, pinned by test) on a null element
  where the old chain silently dropped it.

BREAKING CHANGE: artifacts are compiled at --release 21 (class-file 65) — the
runtime floor is Java 21; Java 17-20 consumers can no longer run telescope.
Generated navigators/bridges impose no extra source-level requirement (sealed
dispatch emits the Match fluent). codecov/patch red is the documented cost of
the eight compile-time-exhaustiveness guard arms.

Closes #217